[package]
name = "lyza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde","rkyv"] }
csv = "1.2.1"
fern = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.1"
rkyv = "0.7.40"
serde = { version = "1.0.154", features = ["derive"] }
walkdir = "2.3.2"
