[package]
name = "lyza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench_maps"
harness = false

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.2.1"
derive_more = "0.99.17"
fern = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.17"
num-derive = "0.3.3"
num-traits = "0.2.15"
paste = "1.0.12"
rand = "0.8.5"
# num-traits = { version = "0.2.15", features = ["std"] }
# { version = "0.4.0", features = ["num-traits", "num-derive"] }
regex = "1.7.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.95"
speedy = "0.8.6"
walkdir = "2.3.2"

# [patch.crates-io]
# speedy = { path = "C:/data/rust/deps/speedy" }
